修改手机登录

--- a/phone/login.html
+++ b/phone/login.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body style="height:1200px;">
 <header class="mainBox">
 <!--top-->
 <div class="topBox">
@@ -51,6 +51,8 @@
 
 </header>
 
+
+<div id="cx_login_bg" class="cx_bg" style="height: 605px;"></div>
 <div class="cx_login">
     	<div class="cx_login_title">
         	<h2>
@@ -149,5 +151,8 @@
   </ul>
   <p>Copyright 财新网 All Rights Reserved 版权所有 复制必究</p>
 </div>
+
+<script type="text/javascript" src="../pc/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="../pc/login.js"></script>
 </body>
 </html>
